INCLUDE_DIRECTORIES(
    "${CMAKE_CURRENT_SOURCE_DIR}/include"
    "${CMAKE_CURRENT_SOURCE_DIR}/src"
)

IF(WIN32)
SET(LIBNETNAME libhttp)
ENDIF(WIN32)

IF(UNIX)
SET(LIBNETNAME http)
ENDIF(UNIX)

SET(SRC
    "${CMAKE_CURRENT_SOURCE_DIR}/include/libhttp.h"
	"${CMAKE_CURRENT_SOURCE_DIR}/src/util.h"
	"${CMAKE_CURRENT_SOURCE_DIR}/src/libhttp.cpp"
)

SOURCE_GROUP(\\ FILES ${SRC})

ADD_LIBRARY(${LIBNETNAME} STATIC
	${SRC}
)
